<resources>
    <string name="app_name">Cricket Prediction And Tips</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="login_register">Login/Regiter</string>
    <string name="title_activity_side_nav">SideNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login_with_google">Login with Google</string>
    <string name="dishant_arak">dishant arak</string>
    <string name="profile">Profile</string>
    <string name="whatsapp">whatsapp</string>
    <string name="todo">TODO</string>
    <string name="contact">Contact</string>
</resources>